test/Fail/FieldOutsideRecord.agda
-- Andreas, 2024-07-19 PR #7379
-- Trigger error FieldOutsideRecord

field
  Foo : Set

-- Expected error:
-- Field appearing outside record declaration.
