test/Fail/FieldOutsideRecord.err
FieldOutsideRecord.agda:5.3-12: error: [FieldOutsideRecord]
Field appearing outside record declaration.
